# f5-lbaas-dashboard

./: AUTHORS  ChangeLog  README.rst  lower-constraints.txt  openstack-common.conf  package.json  setup.cfg  tox.ini
doc/source/: usage.rst
f5_lbaas_dashboard/: __init__.py
f5_lbaas_dashboard/dashboards/project/loadbalancersv2/: views.py
f5_lbaas_dashboard/dashboards/project/loadbalancersv2/workflows/: create_lb.py
f5_lbaas_dashboard/dashboards/project/ngloadbalancersv2/: __init__.py  panel.py  urls.py
f5_lbaas_dashboard/enabled/: _1480_project_loadbalancersv2_panel.py
f5_lbaas_dashboard/tests/: settings.py  test_f5_lbaas_dashboard.py
f5_lbaas_dashboard/tests/integration_tests/: horizon.conf
tools/gate/integration/: commons  post_test_hook.sh
