[metadata]
name = f5-lbaas-dashboard
summary = Horizon panels for Neutron LBaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    f5_lbaas_dashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = f5_lbaas_dashboard/locale
domain = f5-lbaas-dashboard

[update_catalog]
domain = f5-lbaas-dashboard
output_dir = f5_lbaas_dashboard/locale
input_file = f5_lbaas_dashboard/locale/f5-lbaas-dashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = f5_lbaas_dashboard/locale/f5-lbaas-dashboard.pot
